# IGEM

./: .dockerignore  .gitignore  .igem.toml.example  .readthedocs.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  README.md  README.rst  README.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirement.txt
.claude/: settings.json
_utils/: IGEM Database List.xlsx  conf.py  dbSNP_XML_CSV.py  exemplo_args_kwargs.py  extract.py  extract_go.py  gethead.py  (+2 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/src/igem_backend/: __init__.py  config.py  ge.py  main.py
backend/src/igem_backend/alembic/: env.py
backend/src/igem_backend/alembic/versions/: 7a8b9c0d1e2f_baseline_0_1_0.py  846c774a8f66_variant_partitioning_m1.py
backend/src/igem_backend/api/cli/: common.py  main.py
backend/src/igem_backend/api/cli/groups/: db.py  etl.py  report.py
backend/src/igem_backend/api/http/: deps.py  log_capture.py
backend/src/igem_backend/api/http/routers/: reports.py
backend/src/igem_backend/api/http/schemas/: reports.py
backend/src/igem_backend/core/components/: __init__.py  base_component.py  db_component.py  etl_component.py  nlp_component.py  report_component.py
backend/src/igem_backend/modules/db/: core_ddl.py  create_db_mixin.py  database.py  migrate.py  snapshot_download.py  snapshot_export.py  snapshot_nlp.py  types.py
backend/src/igem_backend/modules/db/models/: model_anatomy.py  model_chemicals.py  model_config.py  model_diseases.py  model_entities.py  model_etl.py  model_genes.py  model_go.py  model_nlp.py  model_pathways.py  model_phenotypes.py  model_proteins.py  model_variants.py
backend/src/igem_backend/modules/db/seed/: initial_chemical_groups.json  initial_config.json  initial_data_sources.json  initial_entity_groups.json  initial_entity_relationship_types.json  initial_entity_types.json  initial_genome_assemblies.json  initial_metadata.json  initial_source_systems.json
backend/src/igem_backend/modules/etl/: etl_manager.py
backend/src/igem_backend/modules/etl/dtps/: dtp_anatomy_uberon.py  dtp_chemical_chebi.py  dtp_chemical_chebi_roles.py  dtp_chemical_groups.py  dtp_chemical_hmdb.py  dtp_chemical_mesh.py  dtp_chemical_unichem.py  dtp_ctd_chem_gene.py  dtp_ctd_gene_disease.py  dtp_disease_mesh.py  dtp_disease_mondo.py  dtp_disease_mondo_relationships.py  dtp_gene_ensembl.py  dtp_gene_hgnc.py  dtp_gene_ncbi.py  dtp_go.py  dtp_hgnc.py  dtp_nlp_hmdb.py  dtp_pathway_kegg.py  dtp_pathway_reactome.py  dtp_pathway_reactome_relationships.py  dtp_phenotype_hpo.py  dtp_phenotype_hpo_genes.py  dtp_protein_pfam.py  dtp_protein_uniprot.py  dtp_protein_uniprot_relationships.py
backend/src/igem_backend/modules/etl/mixins/: base_dtp.py  entity_query_mixin.py
backend/src/igem_backend/modules/nlp/: README.md  __init__.py  dictionary.py  normalizer.py  output.py  persister.py  relation_builder.py  resolver.py
backend/src/igem_backend/modules/nlp/strategies/: exact.py
backend/src/igem_backend/modules/report/: __init__.py  report_manager.py
backend/src/igem_backend/modules/report/reports/: base_report.py  report_disease_annotations.py  report_gene_annotations.py  report_go_annotations.py  report_pathway_annotations.py  report_protein_annotations.py
backend/src/igem_backend/modules/report/reports_explain/: disease_annotations.md  gene_annotations.md  go_annotations.md  pathway_annotations.md  protein_annotations.md
backend/src/igem_backend/utils/: db_loader.py  logger.py  text.py
backend/tests/: conftest.py  test_alembic_integration.py  test_alembic_migrate.py
client/: README.md  pyproject.toml
client/src/igem/: __init__.py  cli.py  client.py  config.py  igem.py
client/src/igem/api/cli/: common.py  main.py
client/src/igem/api/cli/groups/: config.py  report.py
client/src/igem/core/: core.py  errors.py
client/src/igem/core/components/: analyze_component.py  base_component.py  data_component.py  describe_component.py  modify_component.py  plot_component.py  report_component.py  reports_component.py
client/src/igem/modules/analyze/: __init__.py  _corrections.py  _encoding.py  _engines.py  _family.py  association.py  ewas.py  gwas.py  interaction.py  lrt.py  results.py
client/src/igem/modules/data/: __init__.py  genotypes.py  phenotypes.py  sumstats.py  tables.py
client/src/igem/modules/describe/: __init__.py  genotypes.py  phenotypes.py
client/src/igem/modules/modify/: __init__.py  genotypes.py  phenotypes.py  selectors.py
client/src/igem/modules/plot/: __init__.py  suggest.py
client/src/igem/modules/plot/bridges/: __init__.py  from_describe.py  from_interaction.py  from_modify.py  from_results.py
client/src/igem/modules/plot/primitives/: __init__.py  distribution.py  dotplot.py  heatmap.py  manhattan.py  qq.py
client/src/igem/modules/report/: __init__.py  manager.py  result.py  schemas.py
client/src/igem/modules/reports/: manager.py
client/src/igem/utils/: logger.py
client/tests/: conftest.py
client/tests/analyze/: conftest.py  test_analyze_component.py  test_annotate.py  test_association_study.py  test_corrections.py  test_encoding.py  test_engines.py  test_ewas.py  test_ewas_survey.py  test_family.py  test_gwas.py  test_interaction_study.py  test_lrt.py  test_results.py
client/tests/cli/: test_config.py
client/tests/data/: test_genotypes.py  test_phenotypes.py  test_sumstats.py  test_tables.py
client/tests/describe/: conftest.py  test_describe_component.py  test_genotype_describe.py  test_phenotype_describe.py
client/tests/modify/: conftest.py  test_genotype_filters.py  test_modify_component.py  test_phenotype_transforms.py
client/tests/plot/: conftest.py  test_bridge_from_describe.py  test_bridge_from_interaction.py  test_bridge_from_modify.py  test_bridge_from_results.py  test_plot_component.py  test_primitives_distribution.py  test_primitives_dotplot.py  test_primitives_heatmap.py  test_primitives_manhattan.py  test_primitives_miami.py  test_primitives_qq.py  test_suggest.py
client/tests/report/: conftest.py  test_report_component.py  test_report_manager.py  test_report_result.py
(+264 files in other folders)
