[tool.poetry]
name = "igem"
version = "0.1.0"
description = ""
authors = ["Andre Rico <97684721+AndreRicoPSU@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
args = "0.1.0"
Django = "4.0.5"
numpy = "1.22.4"
patool = "1.12"
requests = "2.27.1"
pandas = "1.4.2"
psycopg2 = "2.9.3"
lxml = "4.9.1"
django-thread = "0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
