[tool.poetry]
name = "igem"
version = "0.1.0"
description = ""
license="BSD-3-Clause"
authors = ["Andre Rico <alr6366@psu.edu>"]
maintainers = ["Andre Rico <alr6366@psu.edu>"]
readme = "README.rst"
homepage = "https://www.hall-lab.org"
repository = "https://github.com/HallLab/igem"
documentation = "https://igem.readthedocs.io/en/latest/"
keywords = ["Genetics", "Exposomes"]

[tool.poetry.dependencies]
python = "^3.10"
args = "0.1.0"
Django = "4.0.5"
numpy = "1.22.4"
patool = "1.12"
requests = "2.27.1"
pandas = "1.4.2"
psycopg2 = "2.9.3"
lxml = "4.9.1"
django-thread = "0.0.1"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
