[tool.poetry]
name = "igem"
version = "0.1.0"
description = ""
authors = ["Andre Rico <97684721+AndreRicoPSU@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11.0"
pytest = "^7.2.1"
clarite = "^2.3"
django = "^4.1.5"
patool = "^1.12"
requests = "^2.28.2"
mypy = "^0.991"
types-requests = "^2.28.11.8"
django-thread = "^0.0.1"
psycopg2 = "^2.9.5"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
