[tool.poetry]
name = "igem-backend"
version = "0.1.0"
description = "IGEM Backend API"
authors = ["Andre <andre.rico@gmail.com>"]
packages = [{ include = "igem_backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
colorama = "^0.4.6"
psycopg2-binary = "^2.9.0"
requests = "^2.32.0"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
packaging = "^24.0"
click = "^8.1.0"

[tool.poetry.scripts]
igem-server = "igem_backend.api.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
