[tool.poetry]
name = "igem"
version = "2.1.0"
description = "IGEM — bioinformatics analysis client (GWAS/EWAS, knowledge-graph queries, transport-agnostic)"
authors = ["Andre <andre.rico@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrerico/IGEM"
repository = "https://github.com/andrerico/IGEM"
packages = [{ include = "igem", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.7.0"
click = "^8.1.0"
pandas = "^2.2.0"
sgkit = "^0.10.0"
# Pinned to zarr-2 era to match sgkit 0.10's zarr<3 constraint.
# Bump together with sgkit when 0.11 ships with zarr-3 support.
bio2zarr = { version = ">=0.1.0,<0.1.8", extras = ["vcf"] }
bed-reader = "^1.0.0"
statsmodels = "^0.14.0"
tqdm = "^4.66.0"

# Optional embedded-server dep. Enables `IGEM(server_url="embedded:///path")`
# by mounting the FastAPI app in-process via httpx ASGITransport. Only
# installed when extras=["embedded"] is requested (e.g. inside the
# Docker container shipped to HPC). See docs/caderno/2026-05-05_01.md.
igem-server = { path = "../backend", develop = true, optional = true }

[tool.poetry.extras]
embedded = ["igem-server"]

[tool.poetry.scripts]
igem = "igem.api.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
