[tool.poetry]
name = "igem"
version = "2.1.0"
description = "IGEM — bioinformatics analysis client (GWAS/EWAS, knowledge-graph queries, transport-agnostic)"
authors = ["Andre <andre.rico@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrerico/IGEM"
repository = "https://github.com/andrerico/IGEM"
packages = [{ include = "igem", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.7.0"
click = "^8.1.0"
pandas = "^2.2.0"
scipy = "^1.13"
sgkit = "^0.10.0"
# Pinned to zarr-2 era to match sgkit 0.10's zarr<3 constraint.
# Bump together with sgkit when 0.11 ships with zarr-3 support.
bio2zarr = { version = ">=0.1.0,<0.1.8", extras = ["vcf"] }
bed-reader = "^1.0.0"
statsmodels = "^0.14.0"
tqdm = "^4.66.0"
matplotlib = "^3.8.0"

[tool.poetry.scripts]
igem = "igem.api.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

# Embedded mode (in-process IGEM-Server) — for local development and
# the Docker container. Activated via `poetry install --with embedded`.
# The path dependency is intentionally in a poetry group (not main
# dependencies / extras) so it never reaches PyPI metadata, which
# rejects local file:// URIs. End users wanting embedded mode install
# the server package separately:
#
#     pip install igem igem-server
#
[tool.poetry.group.embedded]
optional = true

[tool.poetry.group.embedded.dependencies]
igem-server = { path = "../backend", develop = true }

# R-survey backend for ``regression_kind="r_survey"`` in
# :mod:`igem.modules.analyze`. Installs ``rpy2`` for the bridge
# to R's ``survey`` package — required only for NHANES-style
# stratified-cluster designs where R's Taylor-series variance
# estimator is the canonical reference. Activate with::
#
#     poetry install --with r-survey
#
# A working R install with the ``survey`` package must also be
# present on the host; ``rpy2`` is the Python-side glue.
[tool.poetry.group.r-survey]
optional = true

[tool.poetry.group.r-survey.dependencies]
rpy2 = ">=3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
